--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,26 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.project-img {
+  height: 220px;
+  object-fit: cover;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.enquiry-btn{
+  border: none !important;
+    background: rgb(0 0 0 / 23%) !important;
+    color: #254489 !important;
+    font-weight: 400 !important;
+    border-radius: 2px !important;
+}
+
+.whatsapp-btn{
+ border: none !important;
+    background: #0b6a0bd4 !important;
+    color: #fff !important;
+    font-weight: 400 !important;
+    border-radius: 2px !important;
+
 }
