--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,8 @@
     color: #254489 !important;
     font-weight: 400 !important;
     border-radius: 2px !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px !important;
+
 }
 
 .whatsapp-btn{
@@ -22,5 +24,13 @@
     color: #fff !important;
     font-weight: 400 !important;
     border-radius: 2px !important;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px !important;
 
+}
+
+
+.category-text{
+  background: green !important;
+    font-weight: 100 !important;
+    padding: 6px 11px 7px 13px !important;
 }
