--- a/app/globals.css
+++ b/app/globals.css
@@ -34,3 +34,112 @@
     font-weight: 100 !important;
     padding: 6px 11px 7px 13px !important;
 }
+
+/*home  banner css start*/
+
+.hero-banner {
+  position: relative;
+  height: 450px;
+  background: url('https://cdn.pixabay.com/photo/2024/05/04/16/23/living-room-8739490_1280.jpg') center/cover no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero-banner .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.55);
+}
+
+.hero-banner .z-1 {
+  position: relative;
+  z-index: 1;
+}
+
+/* Banner text */
+.banner-title {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.banner-subtitle {
+  font-size: 1.25rem;
+  margin-bottom: 2rem;
+  color: #e0e0e0;
+      font-weight: 100 !important;
+}
+
+
+
+/* Mobile responsive */
+@media (max-width: 768px) {
+  .hero-banner {
+    height: 50vh;
+    text-align: center;
+  }
+
+  .banner-title {
+    font-size: 2rem;
+
+  }
+
+ 
+}
+
+/*home  banner css end */
+
+
+/* searchfilter css home */
+.search-bar {
+  background: #fff; 
+  border-radius: 50px;
+  padding: 5px 10px;
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.search-input {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  color: #000 !important;
+  padding: 10px 15px;
+  font-size: 16px;
+}
+
+.search-input::placeholder {
+  color: grey;
+  font-weight: 500 !important;
+}
+
+.search-btn {
+  background: #254489;
+  border: none;
+  outline: none;
+  color: white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.clear-btn {
+  background: transparent;
+  border: none;
+  color: red;
+  font-size: 18px;
+  margin-left: 5px;
+}
+
+
+/* searchfilter css home end*/
