--- a/app/globals.css
+++ b/app/globals.css
@@ -166,3 +166,131 @@
     font-weight: 400 !important;
     font-size: 12px !important;
 }
+
+.image-bg-layout{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px !important;
+}
+
+.animation-cards {
+    transition: transform 0.6s ease, box-shadow 0.6s ease; /* smooth and slow */
+}
+
+.animation-cards:hover {
+    transform: translateY(-5px); /* slightly higher lift */
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1); /* optional shadow for depth */
+}
+
+
+
+.touch-banner {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  background-image: url('https://luxuryapartmentgurgaon.in/wp-content/uploads/2025/09/2861443.webp');
+  background-position: center center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+.touch-banner .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.55);
+}
+
+.touch-banner .z-1 {
+  position: relative;
+  z-index: 1;
+}
+
+/* Banner text */
+.banner-title {
+  font-size: 3rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.banner-subtitle {
+  font-size: 1.25rem;
+  margin-bottom: 2rem;
+  color: #e0e0e0;
+      font-weight: 100 !important;
+}
+
+
+
+/* Mobile responsive */
+@media (max-width: 768px) {
+  .touch-banner {
+    height: 50vh;
+    text-align: center;
+  }
+
+  .banner-title {
+    font-size: 2rem;
+
+  }
+
+ 
+}
+
+
+
+
+.category-card {
+  background: #fff;
+  border-radius: 10px;
+  transition: transform 0.2s, box-shadow 0.2s;
+  cursor: pointer;
+}
+
+.category-card:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+}
+
+.category-image img {
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.category-info h6 {
+  font-size: 16px;
+  margin-bottom: 0;
+}
+
+.category-info small {
+  font-size: 13px;
+  color: #6c757d;
+}
+
+
+.need-help-btn{
+  background-color: #244489 !important;
+  padding: 5px 15px;
+    border: none;
+    color: #fff;
+    font-weight: 100;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    border-radius: 2px;
+     transition: all 0.3s ease;
+}
+
+.need-help-btn:hover{
+   transform: translateY(-3px);
+  box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+  border: 1px solid #244489 !important;
+  color: #244489 !important;
+  background-color: #fff !important;
+}
