--- a/app/globals.css
+++ b/app/globals.css
@@ -294,3 +294,35 @@
   color: #244489 !important;
   background-color: #fff !important;
 }
+
+
+.choose-cards{
+ /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px !important; */
+ box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  background-color: #fff !important;
+  padding: 20px;
+  margin-top: 2rem;
+transition: transform 0.6s ease, box-shadow 0.6s ease; /* smooth and slow */
+}
+
+
+.choose-cards:hover{
+   transform: translateY(-5px) !important; /* slightly higher lift */
+    box-shadow: 0 10px 20px rgba(0,0,0,0.1) !important; /* shadow for depth */
+}
+
+
+.choose-icon{
+      display: flex;
+    justify-content: center;
+    font-size: 42px;
+    color: #244489;
+}
+
+.choose-para{
+  text-align: center;
+    margin-top: 13px;
+    font-weight: 400;
+}
+
+
