--- a/app/globals.css
+++ b/app/globals.css
@@ -325,4 +325,14 @@ transition: transform 0.6s ease, box-shadow 0.6s ease; /* smooth and slow */
     font-weight: 400;
 }
 
+/* .slick-prev{
+  background-color: #244489 !important;
+  padding: 20px !important;
+}
+
+.slick-next{
+background-color: #244489 !important;
+  padding: 20px !important;
+} */
+
 
