--- a/app/globals.css
+++ b/app/globals.css
@@ -336,3 +336,28 @@ background-color: #244489 !important;
 } */
 
 
+.card-sidebar-layout{
+  position: sticky !important;
+    top: 0 !important;
+}
+
+
+.view-details-btn{
+  background: #254489 !important;
+    border: none !important;
+    color: #fff !important;
+    font-size: 10px !important;
+    padding: 5px 13px !important;
+    border-radius: 20px !important;
+    transition: all 0.3s ease; /* Smooth transition for all properties */
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px !important;
+
+}
+
+.view-details-btn:hover{
+ background-color: #fff !important;
+ border: 1px solid #254489 !important;
+ color: #254489 !important;
+}
+
+
